sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:6: error: not found: value getNombreValeur
    for (i <- 1 to getNombreValeur()-2){
                   ^AlgCocktailSort1:12: error: not found: value getNombreValeur
    var i=getNombreValeur()
          ^